gccida/c3/prepare_float_lib_cmp
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/prepare_float_lib_cmp/src/optabs.c:3872:48: error: must use 'enum' tag to refer to type 'rtx_code'
void  prepare_float_lib_cmp( rtx *px, rtx *py, rtx_code *pcomparison, machine_mode *pmode, int *punsignedp) 
                                               ^
                                               enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/prepare_float_lib_cmp/src/optabs.c:3872:71: error: must use 'enum' tag to refer to type 'machine_mode'
void  prepare_float_lib_cmp( rtx *px, rtx *py, rtx_code *pcomparison, machine_mode *pmode, int *punsignedp) 
                                                                      ^
                                                                      enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/prepare_float_lib_cmp/src/optabs.c:3874:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v6; // r12d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/prepare_float_lib_cmp/src/optabs.c:4042:12: error: invalid suffix 'xmode' on integer constant
*(short *)0xmode, 
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/prepare_float_lib_cmp/src/optabs.c:4048:31: error: invalid suffix 'xmode' on integer constant
v13 = gen_reg_rtx( *(short *)0xmode); 
                              ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/prepare_float_lib_cmp/src/optabs.c:4049:38: error: invalid suffix 'xmode' on integer constant
v14 = hard_libcall_value( *(short *)0xmode); 
                                     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/prepare_float_lib_cmp/src/optabs.c:4053:21: error: invalid suffix 'xmode' on integer constant
*pmode = *(short *)0xmode; 
                    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/prepare_float_lib_cmp/src/optabs.c:4068:26: error: use of undeclared identifier 'machine_mode'
*px = convert_to_mode( ( machine_mode)v9, v11, 0); 
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/prepare_float_lib_cmp/src/optabs.c:4069:26: error: use of undeclared identifier 'machine_mode'
*py = convert_to_mode( ( machine_mode)v9, v12, 0); 
                         ^
9 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/prepare_float_lib_cmp/src/obj/optabs.o] Error 1
